2621
A related case no longer works in Beta1-RC7 and r20428:

W.scala
```scala
class W
{
	def x = 3
}
class V extends W
```

Y.scala
```scala
object Y
{
	def main(args: Array[String]) =
		println( (new Z).x )
}
```

Z.scala
```scala
class Z extends V
```

 1. Compile
 1. Remove `extends W` from V.
 1. Mark W.scala modified.  Only Z.scala is recompiled, missing compile error in Y.scala:
```scala
Y.scala:4: error: value x is not a member of Z
                println( (new Z).x )
                                 ^
```
